# geol_project

./: .flake8  Makefile  README.md  manage.py  pyproject.toml  test.py
.github/workflows/: github-actions.yml
cross_section/: apps.py  models.py  urls.py  views.py
cross_section/migrations/: 0001_initial.py
data_sample/: data_from_form.json
drawing/: fixtures.py  format.py  inclusion.py  index_colours.py  main.py  possible_settings.txt  rectangles.py  specks.py  test.py  test_2.py  texts.py
well_docs/: asgi.py  settings.py  urls.py  views.py  wsgi.py
well_docs/templates/: base.html  index.html  my_templates.html
well_docs/templates/cross_section/: index_cross.html
well_passport/: convert_to_pdf.py  date_convertation.py  filter_section.py  format_pdf.py  index_convertation.py  logo_convertation.py  map_convertation.py  test.py  utility.py  wellpass.py
well_passport/fixtures/: data.json  example.json  gis.doc  template_1.docx  test_data.json  test_template.docx  ~$mplate_1.docx
well_passport/results/: generated_doc.docx  generated_test.docx  ~$nerated_doc.docx
