[tool.poetry]
name = "well-docs"
version = "0.1.0"
description = "well documantation build"
authors = ["SizNi <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "well_docs"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
django = "^4.1.5"
gunicorn = "^20.1.0"
django-bootstrap5 = "^22.2"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"
django-tables2 = "^2.5.1"
pycairo = "^1.23.0"
ipython = "^8.9.0"
drawsvg = "^1.9.0"
black = "^23.1.0"
flake8 = "^6.0.0"
docxtpl = "^0.16.6"
qrcode = "^7.4.2"
requests = "^2.29.0"
mercantile = "^1.2.1"
py-staticmaps = {extras = ["cairo"], version = "^0.4.0"}
pillow = "^9.5.0"
pyproj = "^3.5.0"
msoffice2pdf = "^0.0.8"
pypdf2 = "^3.0.1"
img2pdf = "^0.4.4"
reportlab = "^3.6.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
